--- a/projects/animated-search-bar/style.css
+++ b/projects/animated-search-bar/style.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   height: 100vh;
   align-items: center;
-  background-color: aliceblue;
+  background-color: rgb(133, 194, 248);
 }
 
 .search-bar-container {
